Update contact email in privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -102,7 +102,7 @@
   <p>
     If you have any questions or concerns about this Privacy Policy, please contact us at:
   </p>
-  <p><strong>Email:</strong> privacy@example.com</p>
+  <p><strong>Email:</strong> jason@restii.com</p>
 
   <p><em>Thank you for trusting us with your information.</em></p>
 </body>
